random ahh shit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=portfolio-risk-analytics
 server.port=8080
-spring.config.import=optional:dotenv:
+spring.config.import=optional:classpath:.env.properties
 
 spring.ai.google.genai.api-key=${GOOGLE_API_KEY}
 spring.ai.google.genai.chat.options.model=${GOOGLE_GEN_AI_MODEL}
