--- a/pom.xml
+++ b/pom.xml
@@ -78,11 +78,11 @@
         </dependency>
 
         <!-- Environment variables -->
-        <dependency>
+        <!--<dependency>
             <groupId>me.paulschwarz</groupId>
             <artifactId>spring-dotenv</artifactId>
             <version>4.0.0</version>
-        </dependency>
+        </dependency> -->
 
         <!-- Testing -->
         <dependency>
