a bit modified backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,317 @@
+# ============================================================================
+# Portfolio Risk Analytics - Application Configuration
+# ============================================================================
+# This file contains all application settings. Sensitive values (API keys,
+# database URIs, secrets) MUST be provided via environment variables.
+# Never commit secrets to version control.
+# ============================================================================
+
+# ============================================================================
+# APPLICATION METADATA
+# ============================================================================
 spring.application.name=portfolio-risk-analytics
-server.port=8080
 spring.config.import=optional:classpath:.env.properties
 
-spring.ai.google.genai.api-key=${GOOGLE_API_KEY}
-spring.ai.google.genai.chat.options.model=${GOOGLE_GEN_AI_MODEL}
-spring.ai.google.genai.project-id=${GOOGLE_PROJECT_ID}
-spring.ai.google.genai.location=us-central1
-spring.ai.google.genai.base-url=https://generativelanguage.googleapis.com
+# ============================================================================
+# SERVER CONFIGURATION
+# ============================================================================
+server.port=8080
+server.servlet.session.timeout=15m
+spring.web.error.include-message=always
+spring.web.error.include-binding-errors=always
+spring.web.error.include-stacktrace=on_param
+spring.web.error.include-exception=false
 
+# HTTP encoding
+spring.servlet.encoding.charset=UTF-8
+spring.servlet.encoding.enabled=true
+spring.servlet.encoding.force=true
+
+# ============================================================================
+# SECURITY & JWT CONFIGURATION
+# ============================================================================
+
+# JWT Secret (CRITICAL - must be 32+ characters)
+# NEVER provide default - REQUIRED environment variable
+# Generate with: openssl rand -base64 32
+app.jwt.secret=${JWT_SECRET}
+
+# JWT Token Expiration (15 minutes in milliseconds)
+# Shorter expiration improves security - limits impact of stolen tokens
+app.jwt.expiration=900000
+
+# Refresh Token Expiration (7 days in milliseconds)
+# Used to obtain new access tokens without re-authenticating
+app.jwt.refresh-expiration=604800000
+
+# ============================================================================
+# CORS CONFIGURATION
+# ============================================================================
+# Configured in SecurityConfig.java with domain whitelist
+# Default allows: localhost:3000, localhost:8080, and your production domain
+# Update CORS configuration in SecurityConfig class for your domains
+
+# ============================================================================
+# DATABASE CONFIGURATION - MONGODB
+# ============================================================================
+
+# MongoDB Connection URI (REQUIRED)
+# Must be provided via MONGO_DB_URI environment variable
+# Format: mongodb://[username:password@]host[:port]/[database]
+# Examples:
+#   mongodb://localhost:27017/portfolio-risk-analytics
+#   mongodb+srv://user:pass@cluster.mongodb.net/portfolio-risk-analytics?retryWrites=true
 spring.mongodb.uri=${MONGO_DB_URI}
 
+# MongoDB Auto Index Creation
+# Automatically creates MongoDB indexes for @Indexed and @CompoundIndex annotations
+spring.data.mongodb.auto-index-creation=true
+
+# Connection Pool Configuration
+# These settings optimize MongoDB connection handling
+spring.data.mongodb.max-pool-size=50
+spring.data.mongodb.min-pool-size=10
+
+# ============================================================================
+# LOGGING CONFIGURATION
+# ============================================================================
+
+# Root logging level
+logging.level.root=INFO
+
+# Application-specific logging levels
+logging.level.com.himanshu.portfolio_risk_analytics=DEBUG
+logging.level.com.himanshu.portfolio_risk_analytics.security=INFO
+logging.level.com.himanshu.portfolio_risk_analytics.service=DEBUG
+logging.level.com.himanshu.portfolio_risk_analytics.controller=INFO
+
+# Spring Framework logging
+logging.level.org.springframework=INFO
+logging.level.org.springframework.web=INFO
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.data.mongodb=INFO
+logging.level.org.springframework.ai=DEBUG
+
+# Third-party libraries
+logging.level.com.fasterxml.jackson=WARN
+logging.level.org.apache.commons=WARN
+
+# Log Pattern for Console Output
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
+# Log Pattern for File Output
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
+# Log File Configuration
+logging.file.name=logs/portfolio-risk-analytics.log
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=30
+logging.logback.rollingpolicy.total-size-cap=1GB
+
+# ============================================================================
+# EXTERNAL API CONFIGURATION
+# ============================================================================
+
+# Alpha Vantage API Configuration
+# Get API key from: https://www.alphavantage.co/
+# Free tier: 5 calls/minute, 25 calls/day
+# Premium tier: Higher limits
 app.alphavantage.api-key=${ALPHA_VANTAGE_API_KEY}
+app.alphavantage.base-url=https://www.alphavantage.co/query
+app.alphavantage.timeout-seconds=10
+app.alphavantage.max-retries=3
+app.alphavantage.retry-backoff-ms=1000
+
+# Google Cloud AI Configuration
+# Get credentials from: https://console.cloud.google.com/
+# Model: gemini-pro, gemini-pro-vision, etc.
+spring.ai.google.genai.api-key=${GOOGLE_API_KEY}
+spring.ai.google.genai.project-id=${GOOGLE_PROJECT_ID}
+spring.ai.google.genai.location=us-central1
+spring.ai.google.genai.chat.options.model=${GOOGLE_GEN_AI_MODEL:gemini-pro}
+spring.ai.google.genai.base-url=https://generativelanguage.googleapis.com
+
+# ============================================================================
+# FINANCIAL METRICS CONFIGURATION
+# ============================================================================
+
+# Risk-Free Rate (Annual)
+# Default: 4.5% (US Treasury rate)
+# Update this weekly with current US Treasury rate
+# Source: https://www.treasury.gov/resource-center/data-chart-center/interest-rates/
+app.risk-free-rate=${APP_RISK_FREE_RATE:0.045}
+
+# Benchmark Ticker for Beta Calculation
+# Default: SPY (S&P 500 ETF)
+# Used for systemic risk (Beta) calculation
+app.benchmark-ticker=SPY
+
+# Minimum Data Points for Analysis
+# Default: 10 days
+# Minimum synchronized data points across all assets for analysis
+app.min-data-points=10
+
+# ============================================================================
+# CACHING CONFIGURATION
+# ============================================================================
+
+# Caffeine Cache Configuration
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=10000,expireAfterWrite=24h
+
+# Stock Data Cache TTL (24 hours)
+# Historical stock data is valid for 1 trading day
+cache.stock-data.ttl-hours=24
+
+# Risk Metrics Cache TTL (1 hour)
+# Calculated risk metrics can be cached for shorter period
+cache.risk-metrics.ttl-minutes=60
+
+# ============================================================================
+# RATE LIMITING CONFIGURATION
+# ============================================================================
+
+# API Rate Limiting (protect against DoS attacks)
+# Limits for /api/v1/analytics/** endpoints
+api.rate-limit.analytics.requests-per-minute=30
+api.rate-limit.analytics.burst-capacity=50
+
+# Limits for /api/v1/auth/** endpoints
+api.rate-limit.auth.requests-per-minute=10
+api.rate-limit.auth.burst-capacity=15
+
+# ============================================================================
+# ASYNC & THREADING CONFIGURATION
+# ============================================================================
+
+# Async Executor Configuration
+# Used for parallel stock data fetching
+async.core-pool-size=8
+async.max-pool-size=16
+async.queue-capacity=100
+async.thread-name-prefix=portfolio-analytics-
+
+# ============================================================================
+# JACKSON JSON CONFIGURATION
+# ============================================================================
+
+# Use UTC timezone for all dates
+spring.jackson.time-zone=UTC
+
+# Don't include null values in JSON responses
+spring.jackson.default-property-inclusion=non_null
+
+# ============================================================================
+# ACTUATOR & MONITORING
+# ============================================================================
+
+# Actuator endpoints exposure
+# Only expose health and metrics for production
+management.endpoints.web.exposure.include=health,metrics,info
+
+# Health endpoint configuration
+management.endpoint.health.show-details=when-authorized
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
+
+# Metrics collection
+management.metrics.enable.jvm=true
+management.metrics.enable.process=true
+management.metrics.enable.system=true
+management.metrics.tags.application=${spring.application.name}
+
+# ============================================================================
+# ENVIRONMENT VARIABLE REQUIREMENTS
+# ============================================================================
+# The following environment variables MUST be set before running:
+#
+# CRITICAL (Application will fail to start without these):
+# - JWT_SECRET: 32+ character random string
+#     Generate: openssl rand -base64 32
+#
+# - MONGO_DB_URI: MongoDB connection string
+#     Example: mongodb://localhost:27017/portfolio-risk-analytics
+#     Or: mongodb+srv://user:pass@cluster.mongodb.net/portfolio-risk-analytics
+#
+# - ALPHA_VANTAGE_API_KEY: From https://www.alphavantage.co/
+#     Example: demo (free/testing), or your actual API key
+#
+# - GOOGLE_API_KEY: From Google Cloud Console
+#     Required for AI insights generation
+#
+# - GOOGLE_PROJECT_ID: Your Google Cloud project ID
+#     Example: my-project-123456
+#
+# OPTIONAL (Has defaults):
+# - GOOGLE_GEN_AI_MODEL: AI model to use (default: gemini-pro)
+# - APP_RISK_FREE_RATE: Risk-free rate as decimal (default: 0.045)
+#
+# Example .env file:
+# JWT_SECRET=$(openssl rand -base64 32)
+# MONGO_DB_URI=mongodb://localhost:27017/portfolio-risk-analytics
+# ALPHA_VANTAGE_API_KEY=demo
+# GOOGLE_API_KEY=your-api-key
+# GOOGLE_PROJECT_ID=your-project-id
+# GOOGLE_GEN_AI_MODEL=gemini-pro
+# APP_RISK_FREE_RATE=0.045
+
+# ============================================================================
+# PROFILES & ENVIRONMENT-SPECIFIC CONFIGURATION
+# ============================================================================
+# Use Spring profiles for environment-specific settings:
+#
+# Development (default):
+#   spring.profiles.active=dev
+#   - Detailed logging
+#   - Smaller rate limits
+#   - Shorter cache TTL
+#
+# Production:
+#   spring.profiles.active=prod
+#   - Minimal logging
+#   - Stricter rate limits
+#   - Longer cache TTL
+#   - Enhanced security
+#
+# Create application-dev.properties and application-prod.properties for overrides
+
+# ============================================================================
+# SECURITY BEST PRACTICES IMPLEMENTED
+# ============================================================================
+# ? JWT_SECRET required (no default)
+# ? JWT expiration: 15 minutes (limits token theft impact)
+# ? Authentication required for analytics endpoints
+# ? CORS whitelist (no wildcard origins)
+# ? Rate limiting configured
+# ? Input validation on request size
+# ? Database connection pooling
+# ? Timeout configuration for external APIs
+# ? Structured logging
+# ? Error details hidden in production
+# ? Health checks configured
+# ? Metrics collection enabled
+
+# ============================================================================
+# TROUBLESHOOTING
+# ============================================================================
+# Common startup errors and fixes:
+#
+# 1. "JWT_SECRET environment variable is not set"
+#    -> Generate and export: export JWT_SECRET=$(openssl rand -base64 32)
+#
+# 2. "Failed to connect to MongoDB"
+#    -> Check MONGO_DB_URI environment variable
+#    -> Verify MongoDB is running: mongosh mongodb://localhost:27017
+#
+# 3. "Alpha Vantage API rate limit exceeded"
+#    -> Free tier: 5 calls/min, 25/day
+#    -> Upgrade API key or add delay between requests
+#
+# 4. "Google API authentication failed"
+#    -> Verify GOOGLE_API_KEY and GOOGLE_PROJECT_ID
+#    -> Check Google Cloud Console has genai API enabled
+#
+# 5. "Port 8080 already in use"
+#    -> Change server.port in this file
+#    -> Or kill process: lsof -i :8080 && kill -9 <PID>
